...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/row_course_list" />

...
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/empty_state_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/no_courses"
                app:srcCompat="@drawable/empty_state_add" />

            <TextView
...
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/no_courses"
                android:textColor="@color/text_grey"/>

            <Button
                android:id="@+id/manage_courses_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/title_download_activity" />

...
