<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_bottom_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_bottom_scorecard"
        android:icon="@drawable/ic_nav_scorecard"
        android:title="@string/nav_scorecard" />

    <item
        android:id="@+id/nav_bottom_points"
        android:icon="@drawable/ic_nav_points"
        android:title="@string/nav_points" />

</menu>
